Migrating from Go backend to entirely Python.
