# backend/services/workoutAppServices/internal/routes/exercise_routes.go
@@ -1,40 +1,0 @@
-package routes
-
-import (
-	handlers "workout_app_backend/internal/handlers"
-
-	"github.com/go-chi/chi/v5"
-)
-
-// RegisterExerciseRoutes registers exercise routes under a given workout ID.
-func RegisterExerciseRoutes(r chi.Router, exerciseHandler *handlers.ExerciseHandler) {
-	r.Route("/workouts/{workoutID}/cardioExercises", func(r chi.Router) {
-		// List all exercises under a workout
-		//r.Get("/", exerciseHandler.ListExercisesByWorkout)
-
-		// Create a new exercise under a workout
-		r.Post("/", exerciseHandler.CreateCardioExercises)
-
-		// Actions on a specific exercise under a workout
-		//r.Route("/{exerciseID}", func(r chi.Router) {
-		//	r.Get("/", exerciseHandler.GetExercise)
-		//	r.Put("/", exerciseHandler.UpdateExercise)
-		//	r.Delete("/", exerciseHandler.DeleteExercise)
-		//})
-	})
-
-	r.Route("/workouts/{workoutID}/strengthExercises", func(r chi.Router) {
-		// List all exercises under a workout
-		//r.Get("/", exerciseHandler.ListExercisesByWorkout)
-
-		// Create a new exercise under a workout
-		r.Post("/", exerciseHandler.CreateStrengthExercises)
-
-		// Actions on a specific exercise under a workout
-		//r.Route("/{exerciseID}", func(r chi.Router) {
-		//	r.Get("/", exerciseHandler.GetExercise)
-		//	r.Put("/", exerciseHandler.UpdateExercise)
-		//	r.Delete("/", exerciseHandler.DeleteExercise)
-		//})
-	})
-}
